# profiles-zome

./: 404.html  Cargo.toml  README.md  flake.nix  hashmap.json  index.html  introduction.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  profiles-store.html  setup.html  template-setup.html
.github/workflows/: build-and-cache.yaml  github-build-and-deploy-rocket-action.yml  publish-docs.yaml  publish-npm.yml  sync-current-main-with-main.yml  test.yaml  update-flake-inputs.yaml
assets/: app.BPtZmB13.js  app.BZ0fQ39a.js  app.BZLWrQSL.js  app.Bb4Lgo5f.js  app.Bke4RZHW.js  app.C8SRKV44.js  app.CA2LiuMe.js  app.CB6FziqI.js  app.CQ6eNvXr.js  app.CTt4GHkQ.js  app.CVMaGO26.js  app.CnMZJ60y.js  app.D2yx6Rwg.js  app.D5TxtEY6.js  app.DP4CPxNJ.js  app.DQ4dYP0s.js  app.Def-CVAI.js  app.Dhc7Yzzw.js  app.DiuAZ19W.js  app.DukmIGau.js  app.FEGzPmTu.js  app._6JqY8BQ.js  app.jUqTVrUV.js  app.mJRr-5HJ.js  app.niBu8ghV.js  elements_agent-avatar.md.Bnt_YqbB.js  elements_agent-avatar.md.BpR3ayFz.js  elements_agent-avatar.md.CRsgi_n3.js  elements_agent-avatar.md.CUHxRKX0.lean.js  elements_agent-avatar.md.CX_Cb9vr.js  elements_agent-avatar.md.CbkJ6qG9.lean.js  elements_agent-avatar.md.Cc7QfjAQ.lean.js  elements_agent-avatar.md.CfrWewg-.js  elements_agent-avatar.md.CpUyhmr4.lean.js  elements_agent-avatar.md.D9eyHAef.lean.js  elements_agent-avatar.md.DGlg16l2.js  elements_agent-avatar.md.DzH8oajZ.js  elements_agent-avatar.md.MZXVBaOj.lean.js  elements_agent-avatar.md.paI0sOJw.lean.js  elements_agent-mention.md.BP1m7ZYz.lean.js  (+195 more)
assets/chunks/: @localSearchIndexroot.B2Fz974o.js  (+1410 more)
backend/: .rustc_info.json
crates/coordinator/: Cargo.toml  README.md  zome.nix
crates/coordinator/src/: lib.rs  linked_devices.rs  profiles.rs  profiles_provider.rs  search.rs
crates/integrity/: Cargo.toml  README.md  zome.nix
crates/integrity/src/: agent_to_profile.rs  lib.rs  linked_devices.rs  path_to_profile.rs  profile.rs  profile_to_agent.rs
docs/: index.md  introduction.md  package.json  profiles-store.md  setup.md
elements/: agent-avatar.html  agent-mention.html  agents-avatars.html  all-profiles.html  create-profile.html  custom-elements.json  my-profile.html  profile-detail.html  profile-list-item.html  profile-prompt.html  search-agent.html  search-profile.html  search-profiles.html  search-user.html  search-users.html  text-with-mentions.html  textarea-with-mentions.html  update-profile.html
tests/: package.json  vitest.config.ts
tests/src/: setup.ts  (+3 more)
ui/: custom-elements.json  package.json  vite.config.ts
workdir/: dna.nix  dna.yaml  happ.nix  happ.yaml
(+1239 files in other folders)
