[package]
authors = [
  "guillem.cordoba@gmail.com",
]
description = "Profiles zome for any Holochain app"
documentation = "https://darksoil.studio/profiles-zome"
edition = "2021"
name = "profiles"
repository = "https://github.com/darksoil-studio/profiles-zome"
version = "0.2.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles"

[dependencies]
derive_more = "0"

holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }
hdk = { workspace = true }

profiles_integrity = { path = "../integrity" }

